# aistudio-api

./: .env.example  .gitignore  README.md  README_EN.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/aistudio_api/: config.py
src/aistudio_api/api/: app.py  response_models.py  responses.py  routes_anthropic.py  routes_gemini.py  routes_openai.py  routes_system.py  schemas.py  state.py
src/aistudio_api/application/: account_rotator.py  api_service.py  api_service_anthropic.py  api_service_common.py  api_service_gemini.py  api_service_openai.py  chat_service.py
src/aistudio_api/domain/: models.py
src/aistudio_api/infrastructure/account/: account_store.py  login_service.py
src/aistudio_api/infrastructure/browser/: browser_engine.py  camoufox_launcher.py
src/aistudio_api/infrastructure/gateway/: capture.py  client.py  model_defaults.py  replay.py  replay_v2.py  request_rewriter.py  session.py  stream_parser.py  streaming.py  wire_codec.py  wire_types.py
src/aistudio_api/static/: app.js  index.html  style.css
tests/unit/: test_anthropic_adapter.py  test_api_responses.py  test_chat_api_service.py  test_function_call_parser.py  test_gemini_request_normalization.py  test_image_api_service.py  test_low_power_ui.py  test_model_defaults.py  test_request_capture.py  test_request_rewriter.py
