[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aistudio-api"
version = "0.1.0"
description = "OpenAI-compatible API wrapper for Google AI Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "curl_cffi>=0.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "playwright>=1.45.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "cloakbrowser",
  "python-multipart>=0.0.9"
]

[project.scripts]
aistudio-api = "aistudio_api.main:main"
aistudio-api-server = "aistudio_api.api.app:main"
aistudio-api-client = "aistudio_api.infrastructure.gateway.client:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
